--- a/project3/index.html
+++ b/project3/index.html
@@ -47,7 +47,7 @@
 
     <p id="pTwo">You have this much time (below) remaining to complete your purchase!!</p>
     
-    <!-- countdown Timer -->
+    <!-- countdown timer -->
     <div id="countdown"></div>
 
     <!-- ticket purchase section -->
